--- a/static/css/courses.css
+++ b/static/css/courses.css
@@ -23,12 +23,18 @@
 
 }
   
+@font-face {
+  font-family: 'Mokoto'; /*a name to be used later*/
+  src: url('../fonts/mokoto.regular.ttf'); /*URL to font*/
+}
 
 .coderchronicles  {
   font-size: 132px;
   font-weight: 1000;
   color: #fff!important;
   text-transform: uppercase;
+  font-family:'Mokoto';
+  letter-spacing: 2px;
 }
 
 
