--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 <br>
 <section class="pt-10">
     <center>
-        <h2 class="wcu">WHY CHOOSE US?</h2>
+        <h2 class="wcu heading">WHY CHOOSE US?</h2>
         <hr style="width:11%;background: black;
     height: 2px;
     opacity: 0.7;">
@@ -53,8 +53,8 @@
                             <line x1="3" y1="9" x2="21" y2="9"></line>
                             <line x1="9" y1="21" x2="9" y2="9"></line>
                         </svg></div>
-                        <h5>Advantage of TFBA (The First & Best Attempt) method</h5>
-                        <p class="card-text">The method devised by our mentors has proved to be precise in clearing any exam</p>
+                        <h5>software Development Service</h5>
+                        <p class="card-text">With a team of top-notch developers and cutting-edge technology, we ensure your projects are delivered on time and exceed expectations, making your digital dreams a reality.</p>
                     </div>
                 </div>
             </div>
@@ -68,8 +68,8 @@
                                 <polyline points="23 6 13.5 15.5 8.5 10.5 1 18"></polyline>
                                 <polyline points="17 6 23 6 23 12"></polyline>
                             </svg></div>
-                        <h5>Personal Guidance Program</h5>
-                        <p class="card-text">With study material available in abundance personalized guidance in what makes use stay ahead of competition. This has produced over 150 results in CSE exam in last 9 years</p>
+                        <h5>Career Growth Courses</h5>
+                        <p class="card-text">Our personalized approach and expert guidance will propel you towards success, ensuring you make informed decisions and navigate your career journey with confidence.</p>
                     </div>
                 </div>
             </div>
@@ -84,8 +84,8 @@
                                     d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z">
                                 </path>
                             </svg></div>
-                        <h5>Test Series Evaluation by Qualified Persons</h5>
-                        <p class="card-text">Only qualified faculties are involved at every stage (prelims, mains and interview preparation)</p>
+                        <h5>Maintenance And Support</h5>
+                        <p class="card-text"> Our dedicated team of experts ensures your systems run at peak efficiency, while we proactively address issues before they disrupt your operations.</p>
                     </div>
                 </div>
             </div>
@@ -101,8 +101,8 @@
                             <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
                             <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
                         </svg></div>
-                        <h5>Catch them Young</h5>
-                        <p class="card-text">More focus on undergraduate students so that they are early into the groove and join the services to serve the nation for long years</p>
+                        <h5>Our Student Community </h5>
+                        <p class="card-text">Join us to unlock endless possibilities for growth, collaboration, and unforgettable friendships. Embrace a supportive environment where each student's unique voice is celebrated, making learning an exciting adventure filled with shared dreams and accomplishments!</p>
                     </div>
                 </div>
             </div>
@@ -122,6 +122,8 @@
 
 <section class="bg-dark dark-mode position-relative min-vh-100 overflow-hidden pt-5"  style="background-image: url('{% static "images/tech.jpg" %}'); background-position: center;">
   <div class="main-container">
+   
+    <br>
     <ul class="grid-wrapper">
       <li style="background: rgba(255, 255, 255, 0.2);
       border-radius: 16px;
@@ -208,12 +210,12 @@
   <br>
   <div class="container col-xxl-8 px-4 py-5">
     <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-      <div class="col-10 col-sm-8 col-lg-6">
-        <img src="bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+      <div class="col-10 col-sm-8 col-lg-6" >
+        <img src="{% static "images/pro.png" %}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy" >
       </div>
       <div class="col-lg-6">
-        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Our Projects</h1>
-        <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <h1 class="display-5 fw-bold text-body-emphasis heading lh-1 mb-3">Our Projects</h1>
+        <p class="lead">Welcome to our world of innovation and creativity! Prepare to be amazed as we take you on a journey through our extraordinary projects and portfolio. We've gathered a collection of top-notch creations that will leave you in awe. No matter if you're a tech lover or just someone who appreciates beauty, our projects have something special for you.  </p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <button type="button" class="btn pro btn-primary btn-lg px-4 gap-3"  style="
           background: #090909;
@@ -225,14 +227,13 @@
     </div>
   </div>
 
-  <br>
 
   <div class="container py-4">
 
     <div class="p-5 mb-4 bg-body-tertiary rounded-3" style="background-image: url('{% static "images/number.jpg" %}');">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-        <p class="col-md-8 fs-5">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+        <h1 class="display-5 fw-bold heading">Corporate Training</h1>
+        <p class="col-md-8" style="font-size:18px;">Stay ahead of the competition and invest in the future success of your company by enrolling in our transformative corporate training courses, where industry experts and thought leaders share invaluable insights and strategies to propel your business to new heights.</p>
         <button class="btn btn-primary btn-lg pro" type="button"  style="
         background: #090909;
         width: max-content;
@@ -243,89 +244,14 @@
     </div>
   </div>
 
-  <br>
-  
-
-<section class="py-0 py-xl-5">
-	<div class="container">
-		<div class="row g-4">
-			<!-- Counter item -->
-			<div class="col-sm-6 col-xl-3">
-				<div class="d-flex justify-content-center align-items-center p-4 bg-warning bg-opacity-15 rounded-3" style="box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);">
-					<span class="display-6 lh-1 mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="currentColor" class="bi bi-laptop" viewBox="0 0 16 16">
-            <path d="M13.5 3a.5.5 0 0 1 .5.5V11H2V3.5a.5.5 0 0 1 .5-.5h11zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11zM0 12.5h16a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5z"/>
-          </svg></span>
-					<div class="ms-4 h6 fw-normal mb-0">
-						<div class="d-flex">
-							<h5 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end="10" data-purecounter-delay="200" data-purecounter-duration="0">10</h5>
-							<span class="mb-0 h5">K</span>
-						</div>
-						<p class="mb-0">Online Courses</p>
-					</div>
-				</div>
-			</div>
-			<!-- Counter item -->
-			<div class="col-sm-6 col-xl-3">
-				<div class="d-flex justify-content-center align-items-center p-4 bg-blue bg-opacity-10 rounded-3" style="background: whitesmoke;box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);">
-					<span class="display-6 lh-1 mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="currentColor" class="bi bi-person-video3" viewBox="0 0 16 16">
-            <path d="M14 9.5a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm-6 5.7c0 .8.8.8.8.8h6.4s.8 0 .8-.8-.8-3.2-4-3.2-4 2.4-4 3.2Z"/>
-            <path d="M2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h5.243c.122-.326.295-.668.526-1H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v7.81c.353.23.656.496.91.783.059-.187.09-.386.09-.593V4a2 2 0 0 0-2-2H2Z"/>
-          </svg></span>
-					<div class="ms-4 h6 fw-normal mb-0">
-						<div class="d-flex">
-							<h5 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end="200" data-purecounter-delay="200" data-purecounter-duration="0">200</h5>
-							<span class="mb-0 h5">+</span>
-						</div>
-						<p class="mb-0">Expert Tutors</p>
-					</div>
-				</div>
-			</div>
-			<!-- Counter item -->
-			<div class="col-sm-6 col-xl-3">
-				<div class="d-flex justify-content-center align-items-center p-4  bg-opacity-10 rounded-3" style="background: #e783e778 ;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);">
-					<span class="display-6 lh-1 mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="currentColor" class="bi bi-person-video" viewBox="0 0 16 16">
-            <path d="M8 9.05a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
-            <path d="M2 2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2Zm10.798 11c-.453-1.27-1.76-3-4.798-3-3.037 0-4.345 1.73-4.798 3H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-1.202Z"/>
-          </svg></span>
-					<div class="ms-4 h6 fw-normal mb-0">
-						<div class="d-flex">
-							<h5 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end="60" data-purecounter-delay="200" data-purecounter-duration="0">60</h5>
-							<span class="mb-0 h5">K+</span>
-						</div>
-						<p class="mb-0">Online Students</p>
-					</div>
-				</div>
-			</div>
-			<!-- Counter item -->
-			<div class="col-sm-6 col-xl-3">
-				<div class="d-flex justify-content-center align-items-center p-4 bg-info bg-opacity-10 rounded-3" style="box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);">
-					<span class="display-6 lh-1 mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
-            <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
-            <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"/>
-          </svg></i></span>
-					<div class="ms-4 h6 fw-normal mb-0">
-						<div class="d-flex">
-							<h5 class="purecounter mb-0 fw-bold" data-purecounter-start="0" data-purecounter-end="6" data-purecounter-delay="300" data-purecounter-duration="0">6</h5>
-							<span class="mb-0 h5">K+</span>
-						</div>
-						<p class="mb-0">Certified Courses</p>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<br>
 <br>
 
     <div class="page-header-ui-content" id="contact">
-        <div class="container px-5" style="max-width: 722px;">
+        <div class="container px-5" style="max-width: 822px;">
            <div class="card formcard rounded-3 text-dark" style="border:0px">
                         <div class="card-body">
                             <center>
-                                <h2>CONTACT US</h2>
+                                <h2 class="heading">CONTACT US</h2>
                             </center>
                             <br>
                            {% if messages %}
