--- a/templates/project.html
+++ b/templates/project.html
@@ -14,12 +14,12 @@
 {% block content %}
     <div class="bg-dark text-secondary px-4 py-5 text-center">
       <div class="py-5">
-        <h1 class="display-5 fw-bold text-white">Dark color hero</h1>
+        <h1 class="display-5 fw-bold proheading text-white">Our Projects</h1>
         <div class="col-lg-6 mx-auto">
           <p class="fs-5 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Our Projects <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right ms-2"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></button>
-            <button type="button" class="btn btn-outline-light btn-lg px-4">Need our service ?</button>
+            <a href="#custom-cards" type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold ">Our Projects <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right ms-2"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></a>
+            <a target="_blank" href="https://api.whatsapp.com/send?phone=7065522354&text=Hey there, I need your service. Please reply." type="button" class="btn btn-outline-light btn-lg px-4">Need our service ?</a>
           </div>
         </div>
       </div>
@@ -31,24 +31,19 @@
   <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
     <div class="col">
       {% for i in project %}
-      <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('{{i.image.url}}');">
-        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-          <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">{{i.name}}</h3>
-          <ul class="d-flex list-unstyled mt-auto">
-            {% comment %} <li class="me-auto">
-              <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
-            </li>
-            <li class="d-flex align-items-center me-3">
-              <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
-              <small>Earth</small>
-            </li>
-            <li class="d-flex align-items-center">
-              <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"></use></svg>
-              <small>3d</small>
-            </li> {% endcomment %}
-          </ul>
+     
+      <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('{{i.image.url}}'); background-blend-mode: soft-light">
+       
+          <div class="card-body">
+            <h3 class="card-title">{{i.name}}</h3>
+          </div>
+          
+          <div class="card-body">
+            <p>Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
         </div>
       </div>
+      
+     
       {% endfor %}
     </div>
 
