--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
     {% load static %}
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     
     {% block desc %}{% endblock desc %}
     <title> {% block title %}{% endblock title %} </title>
