--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 <br>
 <section class="pt-10">
     <center>
-        <h2 class="wcu heading">WHY CHOOSE US?</h2>
+        <h2 class="wcu" style="font-family:Mokoto;">WHY CHOOSE US?</h2>
         <hr style="width:11%;background: black;
     height: 2px;
     opacity: 0.7;">
@@ -214,7 +214,7 @@
         <img src="{% static "images/pro.png" %}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy" >
       </div>
       <div class="col-lg-6">
-        <h1 class="display-5 fw-bold text-body-emphasis heading lh-1 mb-3">Our Projects</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis  lh-1 mb-3"  style="font-family:Mokoto;">Our Projects</h1>
         <p class="lead">Welcome to our world of innovation and creativity! Prepare to be amazed as we take you on a journey through our extraordinary projects and portfolio. We've gathered a collection of top-notch creations that will leave you in awe. No matter if you're a tech lover or just someone who appreciates beauty, our projects have something special for you.  </p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <button type="button" class="btn pro btn-primary btn-lg px-4 gap-3"  style="
@@ -232,7 +232,7 @@
 
     <div class="p-5 mb-4 bg-body-tertiary rounded-3" style="background-image: url('{% static "images/number.jpg" %}');">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold heading">Corporate Training</h1>
+        <h1 class="display-5 fw-bold "  style="font-family:Mokoto;">Corporate Training</h1>
         <p class="col-md-8" style="font-size:18px;">Stay ahead of the competition and invest in the future success of your company by enrolling in our transformative corporate training courses, where industry experts and thought leaders share invaluable insights and strategies to propel your business to new heights.</p>
         <button class="btn btn-primary btn-lg pro" type="button"  style="
         background: #090909;
@@ -251,7 +251,7 @@
            <div class="card formcard rounded-3 text-dark" style="border:0px">
                         <div class="card-body">
                             <center>
-                                <h2 class="heading">CONTACT US</h2>
+                                <h2  style="font-family:Mokoto;">CONTACT US</h2>
                             </center>
                             <br>
                            {% if messages %}
