--- a/templates/base.html
+++ b/templates/base.html
@@ -10,17 +10,13 @@
     <title> {% block title %}{% endblock title %} </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link href="http://fonts.cdnfonts.com/css/operator-Mokoto" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
                
 
     {% block css %}{% endblock %}
 
     <style>
-      @font-face {
-        font-family: 'Mokoto'; 
-        src: url('../fonts/mokoto.regular.ttf'); 
-      }
+     
         .nav-item
       {
           padding-right: 16px;
@@ -29,7 +25,7 @@
       .heading
       {
         text-transform:uppercase; color:#222; letter-spacing:1px;
-        font-family:'Mokoto'; font-weight:380;
+        font-weight:380;
     }
 
     *{
@@ -137,15 +133,15 @@
 <body class="headroom headroom--not-bottom headroom--pinned headroom--top" data-aos-easing="ease" data-aos-duration="800" data-aos-delay="0">
   <nav class="navbar navbar-marketing navbar-expand-lg bg-white navbar-light fixed-top" style="box-shadow: 0px 6px 10px 0px rgb(0 0 0 / 7%);">
     <div class="container px-4">
-        <a class="navbar-brand heading text-dark" style="font-style: bold;" href="/">CODERS CHRONICLES</a>
+        <a class="navbar-brand heading text-dark" style="font-family:Mokoto; font-style: bold;" href="/">CODERS CHRONICLES</a>
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></button>
         <div class="navbar-collapse collapse" id="navbarSupportedContent" >
             <ul class="navbar-nav ms-auto me-lg-5">
-                <li class="nav-item "><a class="nav-link heading" href="/">Home</a></li>
-                <li class="nav-item "><a class="nav-link heading" href="projects">Our Projects</a></li>
-                <li class="nav-item "><a class="nav-link heading" href="courses">Corporate Training</a></li>
-                <li class="nav-item "><a class="nav-link heading" href="aboutus">About us</a></li>
-                <li class="nav-item "><a class="nav-link heading" href="/#contact">Conatct us</a></li>
+                <li class="nav-item "><a class="nav-link"  style="font-family:Mokoto;" href="/">Home</a></li>
+                <li class="nav-item "><a class="nav-link"  style="font-family:Mokoto;" href="projects">Our Projects</a></li>
+                <li class="nav-item "><a class="nav-link"  style="font-family:Mokoto;" href="courses">Corporate Training</a></li>
+                <li class="nav-item "><a class="nav-link " style="font-family:Mokoto;" href="aboutus">About us</a></li>
+                <li class="nav-item "><a class="nav-link " style="font-family:Mokoto;" href="/#contact">Conatct us</a></li>
 
             </ul>
         </div>
@@ -167,7 +163,7 @@
                 <div class="col-lg-3">
                     <!-- logo -->
                     <a class="me-0 "href="/" style="text-decoration:none; color: #ffffff;" >
-                        <h2>CODERS CHRONICLES</h2>
+                        <h2  style="font-family:Mokoto;">CODERS CHRONICLES</h2>
                     </a>
                     <p class="my-3" style="color: #ffffff;">Unlock Your Potential - Building Futures, One at a time: Software Development and Corporate Training for your Advancement in Career</p>
                     <!-- Social media icon -->
