--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,10 @@
     {% block css %}{% endblock %}
 
     <style>
-     
+      @font-face {
+        font-family: 'Mokoto'; 
+        src: url({% static 'fonts/mokoto.regular.ttf' %}); 
+      }
         .nav-item
       {
           padding-right: 16px;
@@ -29,7 +32,7 @@
     }
 
     *{
-        font-family:'Poppins';
+        font-family:'Mokoto','Poppins';
     }
     
 
