--- a/static/css/courses.css
+++ b/static/css/courses.css
@@ -31,7 +31,7 @@
 .coderchronicles  {
   font-size: 132px;
   font-weight: 1000;
-  color: #fff!important;
+  color: #ffff!important;
   text-transform: uppercase;
   font-family:'Mokoto';
   letter-spacing: 2px;
