--- a/templates/course.html
+++ b/templates/course.html
@@ -18,7 +18,7 @@
   <div class="px-4 py-5 my-5 text-center">
       <h1 class="display-5 coderchronicles fw-bold " style="color: #ffffff;">CORPORATE TRAINING</h1>
       <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4" style="color:white; font-size:26px;">Unlock Your Potential - Building Futures, One at a time: Software Development and Corporate Training for your Advancement in Career</p>
+        <p class="lead mb-4" style="color:white; font-size:26px;">Elevate Your Team's Potential with Cutting-Edge Corporate Training in Web and App Development – Ignite Innovation and Amplify Skills!</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
           <a href="#stat" type="button" class="btn btn-lg px-4 gap-3 rounded-pill" style="color: #ffffff;
           border: 3px solid #ffffff;
