--- a/static/css/courses.css
+++ b/static/css/courses.css
@@ -4,11 +4,7 @@
   background: black!important;
 }
 @media only screen and (max-width: 768px) {
-  .coderchronicles  {
-    font-size: 50px!important;
-  
-  }
-
+ 
   .lead{
     font-size: 16px!important;
   }
@@ -29,10 +25,10 @@
 }
 
 .coderchronicles  {
-  font-size: 132px;
-  font-weight: 1000;
+  font-size: 50px;
+  /* font-weight: 1000;
   color: #ffff!important;
-  text-transform: uppercase;
+  text-transform: uppercase; */
   font-family:'Mokoto';
   letter-spacing: 2px;
 }
