--- a/templates/about.html
+++ b/templates/about.html
@@ -17,14 +17,14 @@ background-blend-mode: multiply;">
 <div class="px-4 py-5 my-5 text-center">
     <h1 class="display-5 proheading fw-bold " style="color: #ffffff;">ABOUT US</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4" style="color:white; font-size:26px;">Unlock Your Potential - Building Futures, One at a time: Software Development and Corporate Training for your Advancement in Career</p>
+      <p class="lead mb-4" style="color:white; font-size:26px;">Discover the tale of our journey - from humble beginnings to becoming pioneers in our industry and a relentless commitment to customer satisfaction. </p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-lg px-4 gap-3 rounded-pill" style="color: #ffffff;
+        <a href="#team" type="button" class="btn btn-lg px-4 gap-3 rounded-pill" style="color: #ffffff;
         border: 3px solid #ffffff;
-        box-shadow: 0px 6px 10px 0px rgb(0 0 0 / 7%);" >Meet Our Team <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right ms-2"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></button>
-        <button type="button" class="btn  btn-lg px-4 rounded-pill" style="background: white;
+        box-shadow: 0px 6px 10px 0px rgb(0 0 0 / 7%);" >Meet Our Team <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right ms-2"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></a>
+        <a href="#workflow" type="button" class="btn  btn-lg px-4 rounded-pill" style="background: white;
         color: #000000;
-        box-shadow: 0px 6px 10px 0px rgb(0 0 0 / 7%);">Corporate Training <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right ms-2"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></button>
+        box-shadow: 0px 6px 10px 0px rgb(0 0 0 / 7%);">Our WorkFlow <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right ms-2"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg></a>
       </div>
     </div>
   </div> 
@@ -33,7 +33,7 @@ background-blend-mode: multiply;">
   <br>
   <h1>Our Project <span>Timeline</span></h1>
 
-<div class="container lg">
+<div class="container lg" id="workflow">
 
    <div class="timeline-block timeline-block-right">
       <div class="marker"></div>
@@ -82,7 +82,7 @@ background-blend-mode: multiply;">
 </div>
   
 
-<section class="py-0 py-xl-5 bg-dark dark-mode">
+<section class="py-0 py-xl-5 bg-dark dark-mode" id="team">
 	<div class="container team" style="display: block; padding-left:127px">
     <div class="row g-3">
           
@@ -93,69 +93,10 @@ background-blend-mode: multiply;">
     <div class="caption">
         <h3>Vin Diesel</h3>
         <p>Senior App Developer</p>
-        <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
     </div>
 </div>
-<div class="profile-card">
-    <div class="img">
-        <img src="https://1.bp.blogspot.com/-vhmWFWO2r8U/YLjr2A57toI/AAAAAAAACO4/0GBonlEZPmAiQW4uvkCTm5LvlJVd_-l_wCNcBGAsYHQ/s16000/team-1-2.jpg">
-    </div>
-    <div class="caption">
-        <h3>David Corner</h3>
-        <p>Front End Developer</p>
-        <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-    </div>
-</div>
-<div class="profile-card">
-    <div class="img">
-        <img src="https://1.bp.blogspot.com/-AO5j2Y9lzME/YLjr3mxiqAI/AAAAAAAACPE/KAaYYTtQTrgBE3diTbxGoc4U4fCGx-C2gCNcBGAsYHQ/s16000/team-1-4.jpg">
-    </div>
-    <div class="caption">
-        <h3>Tom Cruise</h3>
-        <p>Full Stact Developer</p>
-        <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-    </div>
-</div>
-<div class="profile-card">
-    <div class="img">
-        <img src="https://1.bp.blogspot.com/-AO5j2Y9lzME/YLjr3mxiqAI/AAAAAAAACPE/KAaYYTtQTrgBE3diTbxGoc4U4fCGx-C2gCNcBGAsYHQ/s16000/team-1-4.jpg">
-    </div>
-    <div class="caption">
-        <h3>Tom Cruise</h3>
-        <p>Full Stact Developer</p>
-        <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-    </div>
-</div>
-<div class="profile-card">
-    <div class="img">
-        <img src="https://1.bp.blogspot.com/-AO5j2Y9lzME/YLjr3mxiqAI/AAAAAAAACPE/KAaYYTtQTrgBE3diTbxGoc4U4fCGx-C2gCNcBGAsYHQ/s16000/team-1-4.jpg">
-    </div>
-    <div class="caption">
-        <h3>Tom Cruise</h3>
-        <p>Full Stact Developer</p>
-        <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-        </div>
-    </div>
-</div>
+
+
 </div>
 </div>
 </section>
